trunk/src/fsassembler/src/bnfc output/parse.output
Terminals which are not used

   _ERROR_


Grammar

    0 $accept: Code $end

    1 Code: ListOperation

    2 ListOperation: /* empty */
    3              | ListOperation Operation

    4 Operation: _SYMB_14 Register _SYMB_0 _INTEGER_
    5          | _SYMB_79 Register _SYMB_0 _INTEGER_
    6          | _IDENT_ _SYMB_1
    7          | _SYMB_72 Operand
    8          | _SYMB_69 Operand
    9          | _SYMB_70 Operand
   10          | _SYMB_71 Operand
   11          | _SYMB_73 Operand
   12          | _SYMB_75 Operand
   13          | _SYMB_74 Operand
   14          | _SYMB_15 Operand
   15          | _SYMB_78
   16          | _SYMB_77 Operand
   17          | _SYMB_76 Operand
   18          | _SYMB_25
   19          | _SYMB_26
   20          | _SYMB_63
   21          | _SYMB_64
   22          | _SYMB_65
   23          | _SYMB_53
   24          | _SYMB_39
   25          | _SYMB_40
   26          | _SYMB_27
   27          | _SYMB_59
   28          | _SYMB_37
   29          | _SYMB_55
   30          | _SYMB_56
   31          | _SYMB_54
   32          | _SYMB_60
   33          | _SYMB_57
   34          | _SYMB_58
   35          | _SYMB_24
   36          | _SYMB_67
   37          | _SYMB_68
   38          | _SYMB_36
   39          | _SYMB_28
   40          | _SYMB_29
   41          | _SYMB_30
   42          | _SYMB_31
   43          | _SYMB_32
   44          | _SYMB_33
   45          | _SYMB_34
   46          | _SYMB_35
   47          | _SYMB_46 Operand
   48          | _SYMB_42 Operand
   49          | _SYMB_46 _SYMB_2
   50          | _SYMB_46 _SYMB_3
   51          | _SYMB_52
   52          | _SYMB_47
   53          | _SYMB_51
   54          | _SYMB_48
   55          | _SYMB_50
   56          | _SYMB_49
   57          | _SYMB_61 Operand
   58          | _SYMB_44 Operand
   59          | _SYMB_62 Operand
   60          | _SYMB_45 Operand
   61          | _SYMB_62 _SYMB_2
   62          | _SYMB_41 _SYMB_2
   63          | _SYMB_41 _SYMB_3
   64          | _SYMB_41 _SYMB_4
   65          | _SYMB_41 _SYMB_5
   66          | _SYMB_41 _SYMB_6
   67          | _SYMB_41 _SYMB_7
   68          | _SYMB_41 _SYMB_8
   69          | _SYMB_41 _SYMB_9
   70          | _SYMB_66
   71          | _SYMB_43
   72          | _SYMB_38

   73 Register: _SYMB_16
   74         | _SYMB_19
   75         | _SYMB_21
   76         | _SYMB_18
   77         | _SYMB_23
   78         | _SYMB_17
   79         | _SYMB_22
   80         | _SYMB_20

   81 Operand: Register
   82        | _SYMB_80
   83        | _IDENT_
   84        | _SYMB_10 _SYMB_80 _SYMB_11
   85        | _SYMB_10 Register _SYMB_11
   86        | _SYMB_10 Register _SYMB_12 _INTEGER_ _SYMB_11
   87        | _SYMB_10 Register _SYMB_13 _INTEGER_ _SYMB_11


Terminals, with rules where they appear

$end (0) 0
error (256)
_ERROR_ (258)
_SYMB_0 (259) 4 5
_SYMB_1 (260) 6
_SYMB_2 (261) 49 61 62
_SYMB_3 (262) 50 63
_SYMB_4 (263) 64
_SYMB_5 (264) 65
_SYMB_6 (265) 66
_SYMB_7 (266) 67
_SYMB_8 (267) 68
_SYMB_9 (268) 69
_SYMB_10 (269) 84 85 86 87
_SYMB_11 (270) 84 85 86 87
_SYMB_12 (271) 86
_SYMB_13 (272) 87
_SYMB_14 (273) 4
_SYMB_15 (274) 14
_SYMB_16 (275) 73
_SYMB_17 (276) 78
_SYMB_18 (277) 76
_SYMB_19 (278) 74
_SYMB_20 (279) 80
_SYMB_21 (280) 75
_SYMB_22 (281) 79
_SYMB_23 (282) 77
_SYMB_24 (283) 35
_SYMB_25 (284) 18
_SYMB_26 (285) 19
_SYMB_27 (286) 26
_SYMB_28 (287) 39
_SYMB_29 (288) 40
_SYMB_30 (289) 41
_SYMB_31 (290) 42
_SYMB_32 (291) 43
_SYMB_33 (292) 44
_SYMB_34 (293) 45
_SYMB_35 (294) 46
_SYMB_36 (295) 38
_SYMB_37 (296) 28
_SYMB_38 (297) 72
_SYMB_39 (298) 24
_SYMB_40 (299) 25
_SYMB_41 (300) 62 63 64 65 66 67 68 69
_SYMB_42 (301) 48
_SYMB_43 (302) 71
_SYMB_44 (303) 58
_SYMB_45 (304) 60
_SYMB_46 (305) 47 49 50
_SYMB_47 (306) 52
_SYMB_48 (307) 54
_SYMB_49 (308) 56
_SYMB_50 (309) 55
_SYMB_51 (310) 53
_SYMB_52 (311) 51
_SYMB_53 (312) 23
_SYMB_54 (313) 31
_SYMB_55 (314) 29
_SYMB_56 (315) 30
_SYMB_57 (316) 33
_SYMB_58 (317) 34
_SYMB_59 (318) 27
_SYMB_60 (319) 32
_SYMB_61 (320) 57
_SYMB_62 (321) 59 61
_SYMB_63 (322) 20
_SYMB_64 (323) 21
_SYMB_65 (324) 22
_SYMB_66 (325) 70
_SYMB_67 (326) 36
_SYMB_68 (327) 37
_SYMB_69 (328) 8
_SYMB_70 (329) 9
_SYMB_71 (330) 10
_SYMB_72 (331) 7
_SYMB_73 (332) 11
_SYMB_74 (333) 13
_SYMB_75 (334) 12
_SYMB_76 (335) 17
_SYMB_77 (336) 16
_SYMB_78 (337) 15
_SYMB_79 (338) 5
_SYMB_80 (339) 82 84
_INTEGER_ (340) 4 5 86 87
_IDENT_ (341) 6 83


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
Code (88)
    on left: 1, on right: 0
ListOperation (89)
    on left: 2 3, on right: 1 3
Operation (90)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72, on right: 3
Register (91)
    on left: 73 74 75 76 77 78 79 80, on right: 4 5 81 85 86 87
Operand (92)
    on left: 81 82 83 84 85 86 87, on right: 7 8 9 10 11 12 13 14 16
    17 47 48 57 58 59 60


state 0

    0 $accept: . Code $end

    $default  reduce using rule 2 (ListOperation)

    Code           go to state 1
    ListOperation  go to state 2


state 1

    0 $accept: Code . $end

    $end  shift, and go to state 3


state 2

    1 Code: ListOperation .
    3 ListOperation: ListOperation . Operation

    _SYMB_14  shift, and go to state 4
    _SYMB_15  shift, and go to state 5
    _SYMB_24  shift, and go to state 6
    _SYMB_25  shift, and go to state 7
    _SYMB_26  shift, and go to state 8
    _SYMB_27  shift, and go to state 9
    _SYMB_28  shift, and go to state 10
    _SYMB_29  shift, and go to state 11
    _SYMB_30  shift, and go to state 12
    _SYMB_31  shift, and go to state 13
    _SYMB_32  shift, and go to state 14
    _SYMB_33  shift, and go to state 15
    _SYMB_34  shift, and go to state 16
    _SYMB_35  shift, and go to state 17
    _SYMB_36  shift, and go to state 18
    _SYMB_37  shift, and go to state 19
    _SYMB_38  shift, and go to state 20
    _SYMB_39  shift, and go to state 21
    _SYMB_40  shift, and go to state 22
    _SYMB_41  shift, and go to state 23
    _SYMB_42  shift, and go to state 24
    _SYMB_43  shift, and go to state 25
    _SYMB_44  shift, and go to state 26
    _SYMB_45  shift, and go to state 27
    _SYMB_46  shift, and go to state 28
    _SYMB_47  shift, and go to state 29
    _SYMB_48  shift, and go to state 30
    _SYMB_49  shift, and go to state 31
    _SYMB_50  shift, and go to state 32
    _SYMB_51  shift, and go to state 33
    _SYMB_52  shift, and go to state 34
    _SYMB_53  shift, and go to state 35
    _SYMB_54  shift, and go to state 36
    _SYMB_55  shift, and go to state 37
    _SYMB_56  shift, and go to state 38
    _SYMB_57  shift, and go to state 39
    _SYMB_58  shift, and go to state 40
    _SYMB_59  shift, and go to state 41
    _SYMB_60  shift, and go to state 42
    _SYMB_61  shift, and go to state 43
    _SYMB_62  shift, and go to state 44
    _SYMB_63  shift, and go to state 45
    _SYMB_64  shift, and go to state 46
    _SYMB_65  shift, and go to state 47
    _SYMB_66  shift, and go to state 48
    _SYMB_67  shift, and go to state 49
    _SYMB_68  shift, and go to state 50
    _SYMB_69  shift, and go to state 51
    _SYMB_70  shift, and go to state 52
    _SYMB_71  shift, and go to state 53
    _SYMB_72  shift, and go to state 54
    _SYMB_73  shift, and go to state 55
    _SYMB_74  shift, and go to state 56
    _SYMB_75  shift, and go to state 57
    _SYMB_76  shift, and go to state 58
    _SYMB_77  shift, and go to state 59
    _SYMB_78  shift, and go to state 60
    _SYMB_79  shift, and go to state 61
    _IDENT_   shift, and go to state 62

    $default  reduce using rule 1 (Code)

    Operation  go to state 63


state 3

    0 $accept: Code $end .

    $default  accept


state 4

    4 Operation: _SYMB_14 . Register _SYMB_0 _INTEGER_

    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71

    Register  go to state 72


state 5

   14 Operation: _SYMB_15 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 77


state 6

   35 Operation: _SYMB_24 .

    $default  reduce using rule 35 (Operation)


state 7

   18 Operation: _SYMB_25 .

    $default  reduce using rule 18 (Operation)


state 8

   19 Operation: _SYMB_26 .

    $default  reduce using rule 19 (Operation)


state 9

   26 Operation: _SYMB_27 .

    $default  reduce using rule 26 (Operation)


state 10

   39 Operation: _SYMB_28 .

    $default  reduce using rule 39 (Operation)


state 11

   40 Operation: _SYMB_29 .

    $default  reduce using rule 40 (Operation)


state 12

   41 Operation: _SYMB_30 .

    $default  reduce using rule 41 (Operation)


state 13

   42 Operation: _SYMB_31 .

    $default  reduce using rule 42 (Operation)


state 14

   43 Operation: _SYMB_32 .

    $default  reduce using rule 43 (Operation)


state 15

   44 Operation: _SYMB_33 .

    $default  reduce using rule 44 (Operation)


state 16

   45 Operation: _SYMB_34 .

    $default  reduce using rule 45 (Operation)


state 17

   46 Operation: _SYMB_35 .

    $default  reduce using rule 46 (Operation)


state 18

   38 Operation: _SYMB_36 .

    $default  reduce using rule 38 (Operation)


state 19

   28 Operation: _SYMB_37 .

    $default  reduce using rule 28 (Operation)


state 20

   72 Operation: _SYMB_38 .

    $default  reduce using rule 72 (Operation)


state 21

   24 Operation: _SYMB_39 .

    $default  reduce using rule 24 (Operation)


state 22

   25 Operation: _SYMB_40 .

    $default  reduce using rule 25 (Operation)


state 23

   62 Operation: _SYMB_41 . _SYMB_2
   63          | _SYMB_41 . _SYMB_3
   64          | _SYMB_41 . _SYMB_4
   65          | _SYMB_41 . _SYMB_5
   66          | _SYMB_41 . _SYMB_6
   67          | _SYMB_41 . _SYMB_7
   68          | _SYMB_41 . _SYMB_8
   69          | _SYMB_41 . _SYMB_9

    _SYMB_2  shift, and go to state 78
    _SYMB_3  shift, and go to state 79
    _SYMB_4  shift, and go to state 80
    _SYMB_5  shift, and go to state 81
    _SYMB_6  shift, and go to state 82
    _SYMB_7  shift, and go to state 83
    _SYMB_8  shift, and go to state 84
    _SYMB_9  shift, and go to state 85


state 24

   48 Operation: _SYMB_42 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 86


state 25

   71 Operation: _SYMB_43 .

    $default  reduce using rule 71 (Operation)


state 26

   58 Operation: _SYMB_44 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 87


state 27

   60 Operation: _SYMB_45 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 88


state 28

   47 Operation: _SYMB_46 . Operand
   49          | _SYMB_46 . _SYMB_2
   50          | _SYMB_46 . _SYMB_3

    _SYMB_2   shift, and go to state 89
    _SYMB_3   shift, and go to state 90
    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 91


state 29

   52 Operation: _SYMB_47 .

    $default  reduce using rule 52 (Operation)


state 30

   54 Operation: _SYMB_48 .

    $default  reduce using rule 54 (Operation)


state 31

   56 Operation: _SYMB_49 .

    $default  reduce using rule 56 (Operation)


state 32

   55 Operation: _SYMB_50 .

    $default  reduce using rule 55 (Operation)


state 33

   53 Operation: _SYMB_51 .

    $default  reduce using rule 53 (Operation)


state 34

   51 Operation: _SYMB_52 .

    $default  reduce using rule 51 (Operation)


state 35

   23 Operation: _SYMB_53 .

    $default  reduce using rule 23 (Operation)


state 36

   31 Operation: _SYMB_54 .

    $default  reduce using rule 31 (Operation)


state 37

   29 Operation: _SYMB_55 .

    $default  reduce using rule 29 (Operation)


state 38

   30 Operation: _SYMB_56 .

    $default  reduce using rule 30 (Operation)


state 39

   33 Operation: _SYMB_57 .

    $default  reduce using rule 33 (Operation)


state 40

   34 Operation: _SYMB_58 .

    $default  reduce using rule 34 (Operation)


state 41

   27 Operation: _SYMB_59 .

    $default  reduce using rule 27 (Operation)


state 42

   32 Operation: _SYMB_60 .

    $default  reduce using rule 32 (Operation)


state 43

   57 Operation: _SYMB_61 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 92


state 44

   59 Operation: _SYMB_62 . Operand
   61          | _SYMB_62 . _SYMB_2

    _SYMB_2   shift, and go to state 93
    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 94


state 45

   20 Operation: _SYMB_63 .

    $default  reduce using rule 20 (Operation)


state 46

   21 Operation: _SYMB_64 .

    $default  reduce using rule 21 (Operation)


state 47

   22 Operation: _SYMB_65 .

    $default  reduce using rule 22 (Operation)


state 48

   70 Operation: _SYMB_66 .

    $default  reduce using rule 70 (Operation)


state 49

   36 Operation: _SYMB_67 .

    $default  reduce using rule 36 (Operation)


state 50

   37 Operation: _SYMB_68 .

    $default  reduce using rule 37 (Operation)


state 51

    8 Operation: _SYMB_69 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 95


state 52

    9 Operation: _SYMB_70 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 96


state 53

   10 Operation: _SYMB_71 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 97


state 54

    7 Operation: _SYMB_72 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 98


state 55

   11 Operation: _SYMB_73 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 99


state 56

   13 Operation: _SYMB_74 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 100


state 57

   12 Operation: _SYMB_75 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 101


state 58

   17 Operation: _SYMB_76 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 102


state 59

   16 Operation: _SYMB_77 . Operand

    _SYMB_10  shift, and go to state 73
    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 74
    _IDENT_   shift, and go to state 75

    Register  go to state 76
    Operand   go to state 103


state 60

   15 Operation: _SYMB_78 .

    $default  reduce using rule 15 (Operation)


state 61

    5 Operation: _SYMB_79 . Register _SYMB_0 _INTEGER_

    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71

    Register  go to state 104


state 62

    6 Operation: _IDENT_ . _SYMB_1

    _SYMB_1  shift, and go to state 105


state 63

    3 ListOperation: ListOperation Operation .

    $default  reduce using rule 3 (ListOperation)


state 64

   73 Register: _SYMB_16 .

    $default  reduce using rule 73 (Register)


state 65

   78 Register: _SYMB_17 .

    $default  reduce using rule 78 (Register)


state 66

   76 Register: _SYMB_18 .

    $default  reduce using rule 76 (Register)


state 67

   74 Register: _SYMB_19 .

    $default  reduce using rule 74 (Register)


state 68

   80 Register: _SYMB_20 .

    $default  reduce using rule 80 (Register)


state 69

   75 Register: _SYMB_21 .

    $default  reduce using rule 75 (Register)


state 70

   79 Register: _SYMB_22 .

    $default  reduce using rule 79 (Register)


state 71

   77 Register: _SYMB_23 .

    $default  reduce using rule 77 (Register)


state 72

    4 Operation: _SYMB_14 Register . _SYMB_0 _INTEGER_

    _SYMB_0  shift, and go to state 106


state 73

   84 Operand: _SYMB_10 . _SYMB_80 _SYMB_11
   85        | _SYMB_10 . Register _SYMB_11
   86        | _SYMB_10 . Register _SYMB_12 _INTEGER_ _SYMB_11
   87        | _SYMB_10 . Register _SYMB_13 _INTEGER_ _SYMB_11

    _SYMB_16  shift, and go to state 64
    _SYMB_17  shift, and go to state 65
    _SYMB_18  shift, and go to state 66
    _SYMB_19  shift, and go to state 67
    _SYMB_20  shift, and go to state 68
    _SYMB_21  shift, and go to state 69
    _SYMB_22  shift, and go to state 70
    _SYMB_23  shift, and go to state 71
    _SYMB_80  shift, and go to state 107

    Register  go to state 108


state 74

   82 Operand: _SYMB_80 .

    $default  reduce using rule 82 (Operand)


state 75

   83 Operand: _IDENT_ .

    $default  reduce using rule 83 (Operand)


state 76

   81 Operand: Register .

    $default  reduce using rule 81 (Operand)


state 77

   14 Operation: _SYMB_15 Operand .

    $default  reduce using rule 14 (Operation)


state 78

   62 Operation: _SYMB_41 _SYMB_2 .

    $default  reduce using rule 62 (Operation)


state 79

   63 Operation: _SYMB_41 _SYMB_3 .

    $default  reduce using rule 63 (Operation)


state 80

   64 Operation: _SYMB_41 _SYMB_4 .

    $default  reduce using rule 64 (Operation)


state 81

   65 Operation: _SYMB_41 _SYMB_5 .

    $default  reduce using rule 65 (Operation)


state 82

   66 Operation: _SYMB_41 _SYMB_6 .

    $default  reduce using rule 66 (Operation)


state 83

   67 Operation: _SYMB_41 _SYMB_7 .

    $default  reduce using rule 67 (Operation)


state 84

   68 Operation: _SYMB_41 _SYMB_8 .

    $default  reduce using rule 68 (Operation)


state 85

   69 Operation: _SYMB_41 _SYMB_9 .

    $default  reduce using rule 69 (Operation)


state 86

   48 Operation: _SYMB_42 Operand .

    $default  reduce using rule 48 (Operation)


state 87

   58 Operation: _SYMB_44 Operand .

    $default  reduce using rule 58 (Operation)


state 88

   60 Operation: _SYMB_45 Operand .

    $default  reduce using rule 60 (Operation)


state 89

   49 Operation: _SYMB_46 _SYMB_2 .

    $default  reduce using rule 49 (Operation)


state 90

   50 Operation: _SYMB_46 _SYMB_3 .

    $default  reduce using rule 50 (Operation)


state 91

   47 Operation: _SYMB_46 Operand .

    $default  reduce using rule 47 (Operation)


state 92

   57 Operation: _SYMB_61 Operand .

    $default  reduce using rule 57 (Operation)


state 93

   61 Operation: _SYMB_62 _SYMB_2 .

    $default  reduce using rule 61 (Operation)


state 94

   59 Operation: _SYMB_62 Operand .

    $default  reduce using rule 59 (Operation)


state 95

    8 Operation: _SYMB_69 Operand .

    $default  reduce using rule 8 (Operation)


state 96

    9 Operation: _SYMB_70 Operand .

    $default  reduce using rule 9 (Operation)


state 97

   10 Operation: _SYMB_71 Operand .

    $default  reduce using rule 10 (Operation)


state 98

    7 Operation: _SYMB_72 Operand .

    $default  reduce using rule 7 (Operation)


state 99

   11 Operation: _SYMB_73 Operand .

    $default  reduce using rule 11 (Operation)


state 100

   13 Operation: _SYMB_74 Operand .

    $default  reduce using rule 13 (Operation)


state 101

   12 Operation: _SYMB_75 Operand .

    $default  reduce using rule 12 (Operation)


state 102

   17 Operation: _SYMB_76 Operand .

    $default  reduce using rule 17 (Operation)


state 103

   16 Operation: _SYMB_77 Operand .

    $default  reduce using rule 16 (Operation)


state 104

    5 Operation: _SYMB_79 Register . _SYMB_0 _INTEGER_

    _SYMB_0  shift, and go to state 109


state 105

    6 Operation: _IDENT_ _SYMB_1 .

    $default  reduce using rule 6 (Operation)


state 106

    4 Operation: _SYMB_14 Register _SYMB_0 . _INTEGER_

    _INTEGER_  shift, and go to state 110


state 107

   84 Operand: _SYMB_10 _SYMB_80 . _SYMB_11

    _SYMB_11  shift, and go to state 111


state 108

   85 Operand: _SYMB_10 Register . _SYMB_11
   86        | _SYMB_10 Register . _SYMB_12 _INTEGER_ _SYMB_11
   87        | _SYMB_10 Register . _SYMB_13 _INTEGER_ _SYMB_11

    _SYMB_11  shift, and go to state 112
    _SYMB_12  shift, and go to state 113
    _SYMB_13  shift, and go to state 114


state 109

    5 Operation: _SYMB_79 Register _SYMB_0 . _INTEGER_

    _INTEGER_  shift, and go to state 115


state 110

    4 Operation: _SYMB_14 Register _SYMB_0 _INTEGER_ .

    $default  reduce using rule 4 (Operation)


state 111

   84 Operand: _SYMB_10 _SYMB_80 _SYMB_11 .

    $default  reduce using rule 84 (Operand)


state 112

   85 Operand: _SYMB_10 Register _SYMB_11 .

    $default  reduce using rule 85 (Operand)


state 113

   86 Operand: _SYMB_10 Register _SYMB_12 . _INTEGER_ _SYMB_11

    _INTEGER_  shift, and go to state 116


state 114

   87 Operand: _SYMB_10 Register _SYMB_13 . _INTEGER_ _SYMB_11

    _INTEGER_  shift, and go to state 117


state 115

    5 Operation: _SYMB_79 Register _SYMB_0 _INTEGER_ .

    $default  reduce using rule 5 (Operation)


state 116

   86 Operand: _SYMB_10 Register _SYMB_12 _INTEGER_ . _SYMB_11

    _SYMB_11  shift, and go to state 118


state 117

   87 Operand: _SYMB_10 Register _SYMB_13 _INTEGER_ . _SYMB_11

    _SYMB_11  shift, and go to state 119


state 118

   86 Operand: _SYMB_10 Register _SYMB_12 _INTEGER_ _SYMB_11 .

    $default  reduce using rule 86 (Operand)


state 119

   87 Operand: _SYMB_10 Register _SYMB_13 _INTEGER_ _SYMB_11 .

    $default  reduce using rule 87 (Operand)
